# BeatTheBot

./: Cargo.toml  Readme.md
assets/: single.key
log/: bot.json
log/old/: firstLeaderBoard.json
src/: api.rs  game.rs  lib.rs  main.rs  player.rs  test.rs
src/api/: objs.rs
src/game/: logging.rs  map.rs  units.rs
src/test/: player.rs
