[package]
name = "beat_the_bot"
version = "0.1.0"
edition = "2021"
description = "Bot for the internal 'BeatTheBot' programming competition"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "beat_the_bot"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.16", features = [ "blocking", "json" ] }
serde = { version = "1.0.160", features = [ "derive" ] }

[features]
high-dbg = [ ]